--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
+
+
 #ext_menu-2 .mbr-brand__name {
   font-size: 16px;
 }
@@ -9,4 +12,12 @@
 }
 #ext_menu-2 .mbr-navbar__hamburger {
   color: #c1c1c1;
+}
+#ext_menu-2 .mbr-navbar__items a {
+  font-family: 'Oxygen', sans-serif;
+  font-size: 12px;
+}
+#ext_menu-2 .mbr-brand__name a {
+  font-family: 'Oxygen', sans-serif;
+  font-size: 12px;
 }
